--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!doctype html>
 <html>
 <head>
-<title>Bio</title>
-<link href="index.css" rel="stylesheet"/>
+<title>Dakota</title>
+<link href="home.css" rel="stylesheet"/>
 </head>
 <body>
   <h1>Dakota LeRoy</h1>
 
-  <br>
-  <br/>
-  <p class="pic"><img src="me.jpeg" alt="Dakota" style="width:218px;height:344px;"></p>
-  <br>
-  <br/>
-  <p>Dakota is a student at Tufts interested</p>
-  <p>in web development, design, and UI/UX.</p>
-  <p>B.S. Computer Science - Tufts Class of 2019</p>
-  <br>
-  <br/>
-  <a href="resume.html" class="button">See Resume</a>
-  <br>
-  <br/>
-  <a href="bio.html" class="button">See Bio</a>
+    <div class="images">
+      <img src="me.jpg"/>
+      <img src="pic3.jpg"/>
+      <img src="pic1.jpg"/>
+      <img src="pic2.jpeg"/>
+      <img src="pic4.png"/>
+      <img src="pic5.jpg"/>
+    </div>
+  
 </body>
 </html>
 
