--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Dakota</title>
-<link href="home.css" rel="stylesheet"/>
+<link href="index.css" rel="stylesheet"/>
 </head>
 <body>
   <h1>Dakota LeRoy</h1>
