--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html>
 <head>
 <title>Dakota</title>
-<link href="index.css" rel="stylesheet"/>
+<link href="home.css" rel="stylesheet"/>
 </head>
 <body>
   <h1>Dakota LeRoy</h1>
 
     <div class="images">
-      <img src="me.jpg"/>
-      <img src="pic3.jpg"/>
       <img src="pic1.jpg"/>
+      <img src="pic5.jpg"/> 
+    </div>
+    <div class="images">
       <img src="pic2.jpeg"/>
+      <img src="pic3.jpg"/>
+    </div>
+    <div class="images">
       <img src="pic4.png"/>
-      <img src="pic5.jpg"/>
+      <img src="me.jpg"/> 
     </div>
   
 </body>
 </html>
-
