--- a/index.html
+++ b/index.html
@@ -7,17 +7,11 @@
 <body>
   <h1>Dakota LeRoy</h1>
 
+    <p>Dakota is currently a front-end engineering intern at Cisco and is looking for opportunities for an internship next summer.
+      She is interested in UI web design work and would like more hands on work experience in the field.</p>
+  
     <div class="images">
-      <img src="pic1.jpg"/>
-      <img src="pic5.jpg"/> 
-    </div>
-    <div class="images">
-      <img src="pic2.jpeg"/>
-      <img src="pic3.jpg"/>
-    </div>
-    <div class="images">
-      <img src="pic4.png"/>
-      <img src="me.jpg"/> 
+      <img src="resume.png"/>
     </div>
   
 </body>
