--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
-  <h1>Dakota LeRoy</h1>
+  <h1>Dakota LeRoy <img src="me.jpg" alt="Dakota" width="150" height="200"></h1> 
 
     <p>Dakota is currently a front-end engineering intern at Cisco and is looking for opportunities for an internship next summer.
       She is interested in UI web design work and would like more hands on work experience in the field.</p>
