--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 
 
-    <p class="animated fadeIn">I a student at Tufts University pursing a B.S. in Computer Science and B.A. in Multimedia Arts.
-    I currently work as a front-end engineering intern at Cisco and am looking for opportunities for an internship next summer.
+    <p class="animated fadeIn">I am a student at Tufts University pursuing a B.S. in Computer Science and B.A. in Multimedia Arts.
+    I currently work as a front-end engineering intern at Cisco in Boston and am looking for opportunities for an internship next summer.
       I am passionate about UI and web design work and would like more hands on work experience in the field.</p>
 
 
