--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
 
     <p class="animated fadeIn">I am a student at Tufts University pursuing a B.S. in Computer Science and B.A. in Multimedia Arts.
-    I currently work as a front-end engineering intern at Cisco in Boston and am looking for opportunities for an internship next summer.
-      I am passionate about UI and web design work and would like more hands on work experience in the field.</p>
+    I have experience working as a front-end engineering intern at Cisco in Boston and am looking for opportunities for an internship next summer
+	    as either a Software Engineering intern or a Security intern. I am passionate about backend engineering, security, and UI/UX,
+	    and am looking for more hands on work in the field.</p>
 
 
 	<!-- The Modal -->
