--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			resume.onclick = function(){
 
 			    modal.style.display = "block";
-			    modalImg.src = "resume.png";
+			    modalImg.src = "Dakota LeRoy.pdf";
 			    resumeCaptionText.innerHTML = "";
 			}
 			portfolio.onclick = function(){
