--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,15 @@
 	<title>Dakota</title>
 	<link href="index.css" rel="stylesheet"/>
 	<link rel="stylesheet" href="animate.min.css">
+	
 </head>
 <body>
 
   	<h1 class="animated fadeIn">Portfolio</h1>
+	
+	<form>
+ 		<input type="button" value="Go back!" onclick="history.back()">
+	</form>
 
 
     <div id="portfolioContent" class="portfolio-content animated fadeIn">
