--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
 <body>
 
   	<h1 class="animated fadeIn">Dakota LeRoy</h1>
+	<div class="buttons-coll animated fadeIn">
+		<button id="resumeButton" class="custom-btn btn-4"><span>Resume</span></button>
+		<button id="portfolioButton" class="custom-btn btn-4"><span>Portfolio</span></button>
+		<p class="animated fadeIn" align="left">I am a student at Tufts University pursuing a B.S. in Computer Science and B.A. in Multimedia Arts.
+    I have experience working as a UX intern at Cisco and a Backend Engineering Intern at Medidata Solutions. I am passionate about UI/UX and design and am currently pursuing full time opportunities in the field after my graduation in May 2019.</p>
+		<img src="me.jpeg" class="headshot" align="">
+		
+	</div>
 
-  	<div class="buttons-coll animated fadeIn">
-   		<button id="resumeButton" class="custom-btn btn-4"><span>Resume</span></button>
-   		<button id="portfolioButton" class="custom-btn btn-4"><span>Portfolio</span></button>
-  	</div>
-
-
-
-    <p class="animated fadeIn">I am a student at Tufts University pursuing a B.S. in Computer Science and B.A. in Multimedia Arts.
-    I have experience working as a front-end engineering intern at Cisco in Boston and am looking for opportunities for an internship next summer
-	    as either a Software Engineering intern or a Security intern. I am passionate about backend engineering, security, and UI/UX,
-	    and am looking for more hands on work in the field.</p>
+    
 
 
 	<!-- The Modal -->
