--- a/portfolio.html
+++ b/portfolio.html
@@ -6,31 +6,32 @@
 	<link rel="stylesheet" href="animate.min.css">
 	
 </head>
+	<form action="index.html">
+    	<input class="custom-btn btn-4" type="submit" value="Home" />
+	</form>
 <body>
 
   	<h1 class="animated fadeIn">Portfolio</h1>
 	
-	<form>
- 		<input type="button" value="Go back!" onclick="history.back()">
-	</form>
+
 
 
     <div id="portfolioContent" class="portfolio-content animated fadeIn">
-		  	<div class="bold">Cisco Defense Orchestrator<div>
+		  	<div class="bold">Cisco Defense Orchestrator</div>
 		  	<div class="light">Worked as a front end software engineer on UI elements of CDO,
-		  	an internet security firewall management system.</div>
-		  	<img src="cisco1.png" width=800 height=450>
-		  	<img src="cisco2.png" width=800 height=450>
-		  	<img src="cisco3.png" width=800 height=450>
-		  	<img src="cisco4.png" width=800 height=450>
+		  	an internet security firewall management system. </div>
+		  	<a href="CDO.pdf" class="project-link">View project work here</a>
+		  	<br></br>
+
 		  	<div class="bold">NavGator</div>
-		  	<div class="light">Worked as a front end engineer and designer for a direction-based game</div>
-		  	<img src="navgator1.png" width=800 height=450>
-		  	<img src="navgator2.png" width=800 height=450>
-		  	<img src="navgator3.png" width=800 height=450>
-		  	<img src="navgator4.png" width=800 height=450>
-		  	<img src="navgator5.png" width=800 height=450>
-		  	<img src="navgator6.png" width=800 height=450>
+		  	<div class="light">Worked as a front end engineer and UI/UX designer for a direction-based game.</div>
+		  	<a href="http://navgator.herokuapp.com" class="project-link">Play game here</a> 
+		  	<br></br>
+
+		  	<div class="bold">DroneFleet</div>
+		  	<div class="light">Designed the UI for a mobile drone-control app.</div>
+		  	<a href="DroneFleet.pdf" class="project-link">View project work here</a> 
+
 	</div>
 
 </body>
