--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dakota</title>
 	<link href="index.css" rel="stylesheet"/>
 	<link rel="stylesheet" href="animate.min.css">
@@ -13,7 +14,7 @@
 		<button id="portfolioButton" class="custom-btn btn-4"><span>Portfolio</span></button>
 		<p class="animated fadeIn" align="left">I am a student at Tufts University pursuing a B.S. in Computer Science and B.A. in Multimedia Arts.
     I have experience working as a UX intern at Cisco and a Backend Engineering Intern at Medidata Solutions. I am passionate about UI/UX and design and am currently pursuing full time opportunities in the field after my graduation in May 2019.</p>
-		<img src="me.jpeg" class="headshot" align="">
+		<img src="me.jpeg" class="headshot">
 		
 	</div>
 
