--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,12 @@
 		  	<br></br>
 
 		  	<div class="bold">DroneFleet</div>
-		  	<div class="light">Designed the UI for a mobile drone-control app.</div>
+		  	<div class="light">Designed the UI and created a storyboard for a mobile drone-control app.</div>
 		  	<a href="DroneFleet.pdf" class="project-link">View project work here</a> 
+	
+			<div class="bold">TEMS vs Drunk College Student</div>
+		  	<div class="light">Designed the website and UI aspects for a 2D game.</div>
+		  	<a href="https://dakotaleroy.github.io/TEMSvsDrunkCollegeStudent/#" class="project-link">View website work here</a> 
 
 	</div>
 
