--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 	
 			<div class="bold">TEMS vs Drunk College Student</div>
 		  	<div class="light">Designed the website and UI aspects for a 2D game.</div>
-		  	<a href="https://dakotaleroy.github.io/TEMSvsDrunkCollegeStudent/#" class="project-link">View website work here</a> 
+		  	<a href="https://dakotaleroy.github.io/TEMSvsDrunkCollegeStudent/#" class="project-link">View website here</a> 
 
 	</div>
 
