--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="buttons-coll animated fadeIn">
 		<button id="resumeButton" class="custom-btn btn-4"><span>Resume</span></button>
 		<button id="portfolioButton" class="custom-btn btn-4"><span>Portfolio</span></button>
-		<p class="animated fadeIn" align="left">I am a student at Tufts University pursuing a B.S. in Computer Science and B.A. in Multimedia Arts.
+		<p class="animated fadeIn" align="left">I am a student at Tufts University pursuing a B.S. in Computer Science.
     I have experience working as a UX intern at Cisco and a Backend Engineering Intern at Medidata Solutions. I am passionate about UI/UX and design and am currently pursuing full time opportunities in the field after my graduation in May 2019.</p>
 		<img src="me.jpeg" class="headshot">
 		
@@ -27,7 +27,7 @@
 		  <div id="caption"></div>
 		</div>
 
-		<script>
+		<script>Arts
 			var modal = document.getElementById('modal');
 			var portfolio = document.getElementById('portfolioButton');
 			var portfolioCaptionText = document.getElementById("portfolioContent");
