--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   	<h1 class="animated fadeIn">Dakota LeRoy</h1>
 	<div class="buttons-coll animated fadeIn">
-		<a href="https://dakotaleroy.github.io/portfolio" class="custom-btn btn-4">Portfolio</a>
+		<button onclick="location.href='https://dakotaleroy.github.io/portfolio'" type="button" class="custom-btn btn-4">Portfolio</button>
+
 		<p class="animated fadeIn" align="left">I am a student at Tufts University pursuing a B.S. in Computer Science.
     I have experience working as a UX intern at Cisco and a Backend Engineering Intern at Medidata Solutions. I am passionate about UI/UX and design and am currently pursuing full time opportunities in the field after my graduation in May 2019.</p>
 		<img src="me.jpeg" class="headshot">
