--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   	<h1 class="animated fadeIn">Dakota LeRoy</h1>
 	<div class="buttons-coll animated fadeIn">
 		<button onclick="location.href='https://dakotaleroy.github.io/portfolio'" class="custom-btn btn-5"><span>Portfolio</span></button>
-		
+		<button onclick="location.href='https://www.linkedin.com/in/dakota-leroy-725bb5126/'" class="custom-btn btn-5"><span>LinkedIn</span></button>
+
 		<p class="animated fadeIn" align="left">I am a student at Tufts University pursuing a B.S. in Computer Science.
     I have experience working as a UX intern at Cisco and a Backend Engineering Intern at Medidata Solutions. I am passionate about UI/UX and design and am currently pursuing full time opportunities in the field after my graduation in May 2019.</p>
 		<img src="me.jpeg" class="headshot">
