--- a/portfolio.html
+++ b/portfolio.html
@@ -1,41 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Dakota</title>
-	<link href="index.css" rel="stylesheet"/>
-	<link rel="stylesheet" href="animate.min.css">
-	
-</head>
-	<form action="index.html">
-    	<input class="custom-btn btn-4" type="submit" value="Home" />
-	</form>
-<body>
+  <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+  body,h1 {font-family: "Raleway", Arial, sans-serif}
+  h1 {letter-spacing: 6px}
+  .w3-row-padding img {margin-bottom: 12px}
+</style>
+<body background="web2.jpg" style="background-size: 100%; background-repeat: no-repeat;">
 
-  	<h1 class="animated fadeIn">Portfolio</h1>
-	
+<!-- !PAGE CONTENT! -->
+<div class="w3-content" style="max-width:1500px">
 
+  <!-- Header -->
+  <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
+    <h1 class="w3-xlarge">PORTFOLIO</h1>
+    <h1 >Dakota LeRoy</h1>
+    
+    <div class="w3-padding-32">
+      <div class="w3-bar w3-border">
+        <a href="index.html" class="w3-bar-item w3-button">Home</a>
+      </div>
+    </div>
 
+  <!-- Projects -->
+    <div style="text-align:center;">
+      <div class="bold">Cisco Defense Orchestrator</div>
+      <div class="light">Worked as a front end software engineer on UI elements of CDO,
+      an internet security firewall management system. </div>
+      <a href="CDO.pdf" class="project-link">View project work here</a>
 
-    <div id="portfolioContent" class="portfolio-content animated fadeIn">
-		  	<div class="bold">Cisco Defense Orchestrator</div>
-		  	<div class="light">Worked as a front end software engineer on UI elements of CDO,
-		  	an internet security firewall management system. </div>
-		  	<a href="CDO.pdf" class="project-link">View project work here</a>
+      <br></br>
 
-		  	<div class="bold">NavGator</div>
-		  	<div class="light">Worked as a front end engineer and UI/UX designer for a direction-based game.</div>
-		  	<a href="http://navgator.herokuapp.com" class="project-link">Play game here</a> 
+      <div class="bold">NavGator</div>
+      <div class="light">Worked as a front end engineer and UI/UX designer for a direction-based game.</div>
+      <a href="http://navgator.herokuapp.com" class="project-link">Play game here</a> 
 
-		  	<div class="bold">DroneFleet</div>
-		  	<div class="light">Designed the UI and created a storyboard for a mobile drone-control app.</div>
-		  	<a href="DroneFleet.pdf" class="project-link">View project work here</a> 
-	
-			<div class="bold">TEMS vs Drunk College Student</div>
-		  	<div class="light">Designed the website and UI aspects for a 2D game.</div>
-		  	<a href="https://dakotaleroy.github.io/TEMSvsDrunkCollegeStudent/#" class="project-link">View website here</a> 
+      <br></br>
 
-	</div>
+      <div class="bold">DroneFleet</div>
+      <div class="light">Designed the UI and created a storyboard for a mobile drone-control app.</div>
+      <a href="DroneFleet.pdf" class="project-link">View project work here</a> 
+
+      <br></br>
+
+      <div class="bold">TEMS vs Drunk College Student</div>
+      <div class="light">Designed the website and UI aspects for a 2D game.</div>
+      <a href="https://dakotaleroy.github.io/TEMSvsDrunkCollegeStudent/#" class="project-link">View website here</a> 
+
+      <br></br>
+    </div>
+
+  </header>
+  
+</div>
 
 </body>
 </html>
