Updating portfolio link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   	<h1 class="animated fadeIn">Dakota LeRoy</h1>
 	<div class="buttons-coll animated fadeIn">
-		<button onclick="location.href='https://dakotaleroy.github.io/portfolio'" class="custom-btn btn-5"><span>Portfolio</span></button>
+		<button onclick="location.href='portfolio.html'" class="custom-btn btn-5"><span>Portfolio</span></button>
 		<button onclick="location.href='https://www.linkedin.com/in/dakota-leroy-725bb5126/'" class="custom-btn btn-5"><span>LinkedIn</span></button>
 
 		<p class="animated fadeIn" align="left">I am a student at Tufts University pursuing a B.S. in Computer Science.
@@ -18,16 +18,6 @@
 		<img src="me.jpeg" class="headshot">
 		
 	</div>
-
-    
-
-
-	<!-- The Modal -->
-		<div id="modal" class="modal">
-		  <span class="close">&times;</span>
-		  <div id="caption"></div>
-		</div>
-
 
 </body>
 </html>
