--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-8">
             <div class="intro-text">
+              <img style="width: 90vw" src="DKLR.pdf"/>
           	</div>
           </div>
         </div>
