editing bodies.pdf file path

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="bodies.pdf" title="Bodies" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/bodies.pdf" title="Bodies" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
