--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="overlay-caption">
                   <div class="overlay-content">
                     <h4>Breakfast Table</h4>
-                    <h4>Given a dataset, I designed a table for breakfast food recoomentions focused for people recovering from eating disorders.</h4>
+                    <h4>Given a dataset, I designed a table for breakfast food recommendations focused for people recovering from eating disorders.</h4>
                   </div>
                 </div>
               </div>
