Changing images to pngs to be visible in chrome

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-8">
             <div class="intro-text">
-              <img style="width: 90vw; repeat: none;" src="DKLR.pdf"/>
+              <img style="width: 90vw; repeat: none;" src="DKLR.png"/>
           	</div>
           </div>
         </div>
@@ -78,7 +78,7 @@
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/bodies.pdf" class="img-responsive" alt="Bodies"> </a> </div>
+              <img src="img/portfolio/bodies.png" class="img-responsive" alt="Bodies"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 adipiscing">
@@ -92,7 +92,7 @@
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/Breakfast Table.pdf" class="img-responsive" alt="Breakfast Table"> </a> </div>
+              <img src="img/portfolio/Breakfast Table.png" class="img-responsive" alt="Breakfast Table"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lorem">
@@ -106,7 +106,7 @@
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/CDO.pdf" class="img-responsive" alt="Cisco Defence Orchestrator"> </a> </div>
+              <img src="img/portfolio/CDO.png" class="img-responsive" alt="Cisco Defence Orchestrator"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lorem">
@@ -120,7 +120,7 @@
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/DroneFleet.pdf" class="img-responsive" alt="Drone Fleet"> </a> </div>
+              <img src="img/portfolio/DroneFleet.png" class="img-responsive" alt="Drone Fleet"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 adipiscing">
