--- a/index.html
+++ b/index.html
@@ -162,37 +162,15 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p>I am a student at Tufts University pursuing a B.S. in Computer Science.I am passionate about UI/UX research and design, and am currently seeking full time opportunities in the field after my graduation in May of 2019.</p>
+          <p>I am a student at Tufts University pursuing a B.S. in Computer Science. I am passionate about UI/UX research and design, and am currently seeking full time opportunities in the field after my graduation in May of 2019.</p>
           <p>My experience ranges from working as a UX intern at Cisco to a Backend Engineering internship at Medidata Solutions. </p>
         </div>
       </div>
     </div>
     <div class="col-md-5 col-md-offset-1">
       <div class="section-title">
-        <p>For inquiries please contact me by email at <strong>dakota.leroy@tufts.edu</strong> or fill out the form below.</p>
+        <p>For inquiries please contact me by email at <strong>dakota.leroy@tufts.edu</strong> or contact me on LinkedIn.</p>
       </div>
-      <form name="sentMessage" id="contactForm" novalidate>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-          <p class="help-block text-danger"></p>
-        </div>
-        <div id="success"></div>
-        <button type="submit" class="btn btn-default btn-lg">Send Message</button>
-      </form>
     </div>
   </div>
 </div>
