--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Breakfast Table.pdf" title="Breakfast Table" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/Breakfast.pdf" title="Breakfast Table" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
