--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Dakota</title>
+<title>Dakota LeRoy</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -42,21 +42,13 @@
         <div class="row">
           <div class="col-xs-12 col-md-8">
             <div class="intro-text">
-              <img style="width: 90vw; repeat: none;" src="DKLR.png"/>
-          	</div>
+              <h1>Dakota</h1>
+              <p>UI.UX Designer / Researcher</p>
+              <a href="#portfolio" class="btn btn-custom btn-lg page-scroll">Portfolio</a> <a href="#contact" class="btn btn-custom btn-lg page-scroll">About Me</a> <a href="https://www.linkedin.com/in/dakota-leroy-725bb5126/" class="btn btn-custom btn-lg page-scroll">LinkedIn</a></div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <div>
-    
-    <div class="buttons">
-    <a href="#portfolio" class="btn btn-custom btn-lg page-scroll">Portfolio</a>
-    <a href="#contact" class="btn btn-custom btn-lg page-scroll">About Me</a>
-    <a href="https://www.linkedin.com/in/dakota-leroy-725bb5126/" class="btn btn-custom btn-lg page-scroll">LinkedIn</a>
-  </div>
   </div>
 </header>
 <!-- Portfolio Section -->
@@ -69,7 +61,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/bodies.pdf" title="Bodies" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/Nasty Woman.pdf" title="Bodies" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
@@ -175,8 +167,6 @@
   </div>
 </div>
 <div id="footer">
-  <div class="container">
-  </div>
 </div>
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
 <script type="text/javascript" src="js/bootstrap.js"></script> 
