--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
           </div>
         </div>
       </div>
+        
+        <div class="col-sm-6 col-md-4 dolor">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/craigslist.pdf" title="Craisglist Redesign" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>NavGator</h4>
+                    <h4>I redesigned the homepage for the popular website, craigslist.</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="img/portfolio/craigslist.png" class="img-responsive" alt="Craigslist Redesign"> </a> </div>
+          </div>
+        </div>
+      </div>
+        
     </div>
   </div>
 </div>
@@ -154,7 +171,8 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p>I am a student at Tufts University pursuing a B.S. in Computer Science. I am passionate about UI/UX research and design, and am currently seeking full time opportunities in the field after my graduation in May of 2019.</p>
+          <p>I am a graduate of Tufts University with a B.S. in Computer Science. I am passionate about UI/UX research and design, and am currently pursuring full time opportunities in the field.</p>
+          <p>Currently, I'm working as a technology associate at Liberty Mutual and exploring different roles in technology at the company.</p>
           <p>My experience ranges from working as a UX intern at Cisco to a Backend Engineering internship at Medidata Solutions. </p>
         </div>
       </div>
