--- a/index.html
+++ b/index.html
@@ -141,17 +141,16 @@
                 </div>
               </div>
               <img src="img/portfolio/navgator1.png" class="img-responsive" alt="NavGator"> </a> </div>
+            </div>
           </div>
         </div>
-      </div>
-        
         <div class="col-sm-6 col-md-4 dolor">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/craigslist.pdf" title="Craisglist Redesign" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>NavGator</h4>
+                    <h4>Craigslist Redesign</h4>
                     <h4>I redesigned the homepage for the popular website, craigslist.</h4>
                   </div>
                 </div>
@@ -159,8 +158,7 @@
               <img src="img/portfolio/craigslist.png" class="img-responsive" alt="Craigslist Redesign"> </a> </div>
           </div>
         </div>
-      </div>
-        
+      </div> 
     </div>
   </div>
 </div>
@@ -179,7 +177,7 @@
     </div>
     <div class="col-md-5 col-md-offset-1">
       <div class="section-title">
-        <p>For inquiries please contact me by email at <strong>dakota.leroy@tufts.edu</strong> or contact me on LinkedIn.</p>
+        <p>For inquiries please contact me by email at <strong>dakota.leroy126@gmail.com</strong> or contact me on LinkedIn.</p>
       </div>
     </div>
   </div>
