--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 dolor">
+        <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/craigslist.pdf" title="Craisglist Redesign" data-lightbox-gallery="gallery1">
               <div class="hover-text">
