--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
       </div> 
         <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://dakotaleroy.github.io/TEMSvsDrunkCollegeStudent/#" title="TEMS vs College Student" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/pet.me.pdf" title="pet.me" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>TEMS vs College Student</h4>
-                    <h4>I was in charge or the UI of this 2D game and designed its website.</h4>
+                    <h4>pet.me</h4>
+                    <h4>I designed a pet cam mobile app for iOS.</h4>
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/tems1.png" class="img-responsive" alt="TEMS vs College Student"> </a> </div>
+              <img src="img/portfolio/pet.me.png" class="img-responsive" alt="pet.me"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lorem">
@@ -156,7 +156,7 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p>I am a graduate of Tufts University with a B.S. in Computer Science. I am passionate about UI/UX research and design, and am currently pursuring full time opportunities in the field.</p>
+          <p>I am a graduate of Tufts University with a B.S. in Computer Science. I am passionate about UI/UX research and design, and am pursuring full time opportunities in the field.</p>
           <p>Currently, I'm working as a technology associate at Liberty Mutual and exploring different roles in technology at the company.</p>
           <p>My experience ranges from working as a UX intern at Cisco to a Backend Engineering internship at Medidata Solutions. </p>
         </div>
