--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
         </div>
         <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/DroneFleet.pdf" title="Drone Fleet" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/Roomie.pdf" title="Roomie" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
                     <h4>Drone Fleet</h4>
-                    <h4>I designed the UI and created a storyboard for a mobile drone-control app.</h4>
+                    <h4>I designed the initial UI for a tenant portal website.</h4>
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/DroneFleet.png" class="img-responsive" alt="Drone Fleet"> </a> </div>
+              <img src="img/portfolio/Roomie.png" class="img-responsive" alt="Roomie"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 dolor">
