--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Drone Fleet</h4>
+                    <h4>Roomie</h4>
                     <h4>I designed the initial UI for a tenant portal website.</h4>
                   </div>
                 </div>
