--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
               <img src="img/portfolio/Roomie.png" class="img-responsive" alt="Roomie"> </a> </div>
           </div>
         </div>
+        <div class="col-sm-6 col-md-4 lorem">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/LM.pdf" title="Liberty Mutual" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>Liberty Mutual</h4>
+                    <h4>I was the UX lead for the Rejected Transactions screen for Comp 2.0, a Liberty Mutual tool.</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="img/portfolio/LM.png" class="img-responsive" alt="Liberty Mutual"> </a> </div>
+          </div>
+        </div>
         <div class="col-sm-6 col-md-4 dolor">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="http://navgator.herokuapp.com" title="NavGator" data-lightbox-gallery="gallery1">
