--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <img src="img/portfolio/LM.png" class="img-responsive" alt="Liberty Mutual"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 dolor">
+<!--         <div class="col-sm-6 col-md-4 dolor">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="http://navgator.herokuapp.com" title="NavGator" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -159,7 +159,7 @@
               <img src="img/portfolio/navgator1.png" class="img-responsive" alt="NavGator"> </a> </div>
             </div>
           </div>
-        </div>
+        </div> -->
     </div>
   </div>
 </div>
