--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p>I am a graduate of Tufts University with a B.S. in Computer Science. I am passionate about UI/UX research and design, and am pursuring full time opportunities in the field.</p>
-          <p>Currently, I'm working as a technology associate at Liberty Mutual and exploring different roles in technology at the company.</p>
-          <p>My experience ranges from working as a UX intern at Cisco to a Backend Engineering internship at Medidata Solutions. </p>
+          <p>I am a graduate of Tufts University with a B.S. in Computer Science focusing on UI/UX design and research. I have a years worth of professional experience focusing on web UIs. </p>
+          <p>My current position is as a UI/UX Associate at Liberty Mutual working on the an internal tool for the sales and compensaion department. At this time, I am pursuing UI/UX product designer and researcher roles in Boston.</p>
+          <p>I have a strong technical background in addition to my UX experience, and hope to learn more about accessible and inclusive design in the future. </p>
         </div>
       </div>
     </div>
