--- a/index.html
+++ b/index.html
@@ -146,21 +146,6 @@
               <img src="img/portfolio/LM.png" class="img-responsive" alt="Liberty Mutual"> </a> </div>
           </div>
         </div>
-<!--         <div class="col-sm-6 col-md-4 dolor">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://navgator.herokuapp.com" title="NavGator" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <div class="overlay-caption">
-                  <div class="overlay-content">
-                    <h4>NavGator</h4>
-                    <h4>I worked as a front end engineer and UI/UX designer for this direction-based game.</h4>
-                  </div>
-                </div>
-              </div>
-              <img src="img/portfolio/navgator1.png" class="img-responsive" alt="NavGator"> </a> </div>
-            </div>
-          </div>
-        </div> -->
     </div>
   </div>
 </div>
@@ -171,15 +156,15 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p>I am a graduate of Tufts University with a B.S. in Computer Science focusing on UI/UX design and research. I have a years worth of professional experience focusing on web UIs. </p>
-          <p>My current position is as a UI/UX Associate at Liberty Mutual working on the an internal tool for the sales and compensaion department. At this time, I am pursuing UI/UX product designer and researcher roles in Boston.</p>
-          <p>I have a strong technical background in addition to my UX experience, and hope to learn more about accessible and inclusive design in the future. </p>
+          <p>I am a UX Designer and Tufts CS alum with 1+ years of professional experience working in UI/UX Design.</p>
+          <p>My current position is as a UX Designer for Bullhorn working on TempBuddy, a workforce management application, and Bullhorn Time and Expense. At this time, I am interested in UI/UX and Product Designer roles in New York City.</p>
+          <p>I have a strong technical background in addition to my UX experience, and seek to find creative solutions to everyday design problems. </p>
         </div>
       </div>
     </div>
     <div class="col-md-5 col-md-offset-1">
       <div class="section-title">
-        <p>For inquiries please contact me by email at <strong>dakota.leroy126@gmail.com</strong> or contact me on LinkedIn.</p>
+        <p>For inquiries please contact me by email at <strong>dakota.leroy126@gmail.com</strong> or on LinkedIn.</p>
       </div>
     </div>
   </div>
