--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             <div class="intro-text">
               <h1>Dakota</h1>
               <p>UI/UX Designer and Researcher</p>
-              <a href="#portfolio" class="btn btn-custom btn-lg page-scroll">Portfolio</a> <a href="#contact" class="btn btn-custom btn-lg page-scroll">About Me</a> <a href="https://www.linkedin.com/in/dakota-leroy-725bb5126/" class="btn btn-custom btn-lg page-scroll">LinkedIn</a><a href="img/portfolio/Resume.pdf" class="btn btn-custom btn-lg page-scroll">Resume</a>
+                <a href="#portfolio" class="btn btn-custom btn-lg page-scroll">Portfolio</a>
+                <a href="#contact" class="btn btn-custom btn-lg page-scroll">About Me</a>
+                <a href="https://www.linkedin.com/in/dakota-leroy-725bb5126/" class="btn btn-custom btn-lg page-scroll">LinkedIn</a>
+                <a href="img/portfolio/Resume.png" class="btn btn-custom btn-lg page-scroll">Resume</a>
             </div>
           </div>
         </div>
