--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
         </div>
           <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/craigslist.pdf" title="Craisglist Redesign" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/TB.pdf" title="TempBuddy" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
                     <h4>Craigslist Redesign</h4>
-                    <h4>I redesigned the homepage for the popular website, craigslist.</h4>
+                    <h4>I work as the lead UX designer for the workforce management platform.</h4>
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/craigslist.png" class="img-responsive" alt="Craigslist Redesign"> </a> </div>
+              <img src="img/portfolio/TB.png" class="img-responsive" alt="TempBuddy"> </a> </div>
           </div>
         </div>
       </div> 
