--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="col-xs-12 col-md-8">
             <div class="intro-text">
               <h1>Dakota</h1>
-              <p>UI/UX Designer and Researcher</p>
+              <p>UI/UX Designer</p>
                 <a href="#portfolio" class="btn btn-custom btn-lg page-scroll">Portfolio</a>
                 <a href="#contact" class="btn btn-custom btn-lg page-scroll">About Me</a>
                 <a href="https://www.linkedin.com/in/dakota-leroy-725bb5126/" class="btn btn-custom btn-lg page-scroll">LinkedIn</a>
