--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="row">
       <div class="portfolio-items">
         
-        <div class="col-sm-6 col-md-4 adipiscing">
+<!--         <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/Breakfast.pdf" title="Breakfast Table" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -76,6 +76,21 @@
                 </div>
               </div>
               <img src="img/portfolio/Breakfast Table.png" class="img-responsive" alt="Breakfast Table"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 lorem"> -->
+          <div class="col-sm-6 col-md-4 adipiscing">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/BTE.pdf" title="Bullhorn Time & Expense" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <div class="overlay-caption">
+                  <div class="overlay-content">
+                    <h4>Breakfast Table</h4>
+                    <h4>I am the lead designer and researcher for Bullhorn Time & Expense team.</h4>
+                  </div>
+                </div>
+              </div>
+              <img src="img/portfolio/BTE.png" class="img-responsive" alt="Bullhorn Time & Expense"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lorem">
