--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Breakfast Table</h4>
+                    <h4>Bullhorn Time & Expense</h4>
                     <h4>I am the lead designer and researcher for Bullhorn Time & Expense team.</h4>
                   </div>
                 </div>
