--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Craigslist Redesign</h4>
+                    <h4>TempBuddy</h4>
                     <h4>I work as the lead UX designer for the workforce management platform.</h4>
                   </div>
                 </div>
@@ -174,8 +174,8 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p>I am a UX Designer and Tufts CS alum with 1+ years of professional experience working in UI/UX Design.</p>
-          <p>My current position is as a UX Designer for Bullhorn working on TempBuddy, a workforce management application, and Bullhorn Time and Expense. At this time, I am interested in UI/UX and Product Designer roles in New York City.</p>
+          <p>I am a UX Designer and Tufts CS alum with almost 2 years of professional experience working in UI/UX Design.</p>
+          <p>My current position is a UX Designer at Bullhorn working on TempBuddy, a workforce management application, and Bullhorn Time and Expense. At this time, I am interested in UI/UX and Product Designer roles in New York City.</p>
           <p>I have a strong technical background in addition to my UX experience, and seek to find creative solutions to everyday design problems. </p>
         </div>
       </div>
